# emulador-nintendinho

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: cpu.h  nes.h
src/: cpu.c  main.c
